--- a/ketQuaXoSo/src/main/res/values/colors.xml
+++ b/ketQuaXoSo/src/main/res/values/colors.xml
@@ -27,6 +27,6 @@
     <color name="chat_user_text_color">#727272</color>
     <color name="yellows">#E5F512</color>
     <color name="gray">#EAEAEA</color>
-    <color name="app_color">#950a11</color>
+    <color name="app_color">#e51c23</color>
 
 </resources>
