--- a/ketQuaXoSo/src/main/res/layout/activity_main.xml
+++ b/ketQuaXoSo/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
         android:id="@+id/lvList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/ad"
         android:divider="@null"
         android:dividerHeight="0dp" >
     </ListView>
@@ -19,15 +18,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
-
-    <com.google.android.gms.ads.AdView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/ad"
+    <com.startapp.android.publish.banner.Banner
+        android:id="@+id/startAppBanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        app:adSize="SMART_BANNER"
-        app:adUnitId="ca-app-pub-1857950562418699/8897898368"
         />
+
 
 </RelativeLayout>
